# ZalStudio

./: .gitignore  Cargo.toml  README.md  config.toml  test_mtp.ps1  test_phone.ps1
Ctempnuget_dl/TempProj/: Class1.cs
src/: app.rs  collage.rs  config.rs  gallery.rs  google_drive.rs  import.rs  lang.rs  main.rs  mtp_backend.rs  powershell_mtp_backend.rs  print_history.rs  printer.rs  server.rs  ui.rs  usb_detect.rs  wired_import.rs
