[package]
name = "zalstudio"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = { version = "0.29", features = ["default"] }
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
imageproc = "0.26"
ab_glyph = "0.2"
kamadak-exif = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
chrono = "0.4"
walkdir = "2.5"
qrcode = "0.14"
base64 = "0.22"
serde_json = "1.0"
ureq = "3.0"
sha2 = "0.10"
urlencoding = "2.1"
mtp-rs = "0.13"
futures = "0.3"
fastrand = "2"
